data/derived/sp14/progs/unify/prog3867.ml.out
Characters 73-88:
  | hd::tl -> helper (hd::xs) 
              ^^^^^^^^^^^^^^^
Error: This expression has type 'a list -> 'a list
       but an expression was expected of type 'a list
